change movie to message on swagger db.js and message controller
