# I-Angular2/ng2api/api/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Movie App
+  title: Message App
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
@@ -18,33 +18,33 @@ consumes:
 produces:
   - application/json
 paths:
-  /movie:
+  /message:
     # our controller name
-    x-swagger-router-controller: movie
+    x-swagger-router-controller: message
     get:
-      operationId: getAll
-      description: get the movies list
+      operationId: all
+      description: get the messages list
       # define the type of response for Success "200" and Error
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/GetMoviesListResponse"
+            $ref: "#/definitions/GetMessageListResponse"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
     post:
       operationId: save
-      description: add a new movie to the list
-      # movie info to be stored
+      description: add a new message to the list
+      # message info to be stored
       parameters:
         - name: title
-          description: Movie properties
+          description: Message properties
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Movie"
+            $ref: "#/definitions/Message"
       responses:
         "200":
           description: Success
@@ -54,12 +54,12 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /movie/{id}:
+  /message/{id}:
     # our controller name
-    x-swagger-router-controller: movie
+    x-swagger-router-controller: message
     get:
       operationId: getOne
-      description: get a movie
+      description: get a message
       # define the type of response for Success "200" and Error
       parameters:
         - name: id
@@ -70,27 +70,27 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/GetMovieResponse"
+            $ref: "#/definitions/GetMessageResponse"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
     put:
       operationId: update
-      description: update a movie
+      description: update a message
       # define the parameters
       parameters:
         - name: id
-          description: Movie id
+          description: Message id
           type: string
           in: path
           required: true
         - name: title
-          description: Movie properties
+          description: Message properties
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Movie"
+            $ref: "#/definitions/Message"
       responses:
         "200":
           description: Success
@@ -101,12 +101,12 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     delete:
-      operationId: delMovie
-      description: delete a movie
+      operationId: del
+      description: delete a message
       # define the parameters
       parameters:
         - name: id
-          description: Movie id
+          description: Message id
           type: string
           in: path
           required: true
@@ -141,7 +141,7 @@ definitions:
     required:
       - success
       - description
-  GetMovieResponse:
+  GetMessageResponse:
     required:
       - id
       - title
@@ -153,7 +153,7 @@ definitions:
         type: string
       year:
         type: number
-  Movie:
+  Message:
     type: object
     properties:
       title:
@@ -165,12 +165,12 @@ definitions:
     required:
       - title
       - year
-  GetMoviesListResponse:
+  GetMessageListResponse:
     required:
-      - movies
+      - message
     properties:
-      # The array of movies
-      movies:
+      # The array of messages
+      message:
         type: array
         items: 
           type: object
